2004-11-02  Eric B. Weddington  <ericw@evcohs.com>

	* AUTHORS: Forgot to add Alexander Popov.

2004-11-02  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/iom32.h: Correct license with permission from
	Steinar Haugen.
	* include/avr/iom64.h: Ditto.
	* include/avr/iom8515.h: Ditto.
	* include/avr/iom8535.h: Ditto.

2004-11-02  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/iotn2313.h: Correct license with permission from
	Bob Paddock.
	* include/avr/wdt.h: Correct license with permission from Marek
	Michalkiewicz.
	* acconfig.h: Correct license with permission from Theodore A. Roth.
	* include/avr/iom168.h: Ditto.
	* include/avr/iom48.h: Ditto.
	* include/avr/iom88.h: Ditto.
	* include/avr/iomx8.h: Ditto.
	* include/avr/iotn13.h: Ditto.
	* include/avr/portpins.h: Ditto.
	* include/avr/sleep.h: Ditto.
	* xml/Atmel2libc.py: Ditto.
	* xml/Desc-parser.py: Ditto.
	* xml/Device.dtd: Ditto.

2004-11-02  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* acconfig.h: Add modified BSD license header.
	* avr-libc.spec.in: Ditto.
	* devtools/cr_check.py: Ditto.
	* xml/Validate.py: Ditto.

2004-11-01  Eric B. Weddington  <ericw@evcohs.com>

	* doc/INSTALL: Update release versions compatible with avr-libc and
	instructions.
	[Bug #10150]

2004-11-01  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/io8515.h: Correct license with permission from Marek 
	Michalkiewicz.
	* include/avr/io8534.h: Ditto.
	* include/avr/io8535.h: Ditto.
	* include/avr/ioat94k.h: Ditto.
	* include/avr/iom103.h: Ditto.
	* include/avr/iom161.h: Ditto.
	* include/avr/iom163.h: Ditto.
	* include/avr/iom323.h: Ditto.
	* include/avr/iom8.h: Ditto.
	* include/avr/iotn11.h: Ditto.
	* include/avr/iotn12.h: Ditto.
	* include/avr/iotn15.h: Ditto.
	* include/avr/iotn22.h: Ditto.
	* include/avr/iotn28.h: Ditto.
	* include/avr/parity.h: Ditto.

2004-11-01  Eric B. Weddington  <ericw@evcohs.com>

	* crt1/gcrt1.S: Correct license with permission from Marek 