@@ -1,3 +1,14 @@
+2004-11-03  Eric B. Weddington  <ericw@evcohs.com>
+
+	* include/avr/iom162.h: Correct license with permission from Nils 
+	Kristian Strom.
+	* include/avr/iom169.h: Correct license with permission from Juergen 
+	Schilling.
+	* doconf: Add copyright notice.
+	* dodist: Ditto.
+	* domake: Ditto.
+	* reconf: Ditto.
+
 2004-11-02  Eric B. Weddington  <ericw@evcohs.com>
 
 	* AUTHORS: Forgot to add Alexander Popov.
